--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ body {
 .app {
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   position: fixed;
-  background-color: rgb(54, 43, 65);
+  background-color: rgba(31, 30, 32, 0.392);
   padding: 15px;
   /* width: 100%;
     height: 100%; */
@@ -119,12 +119,14 @@ body {
     height: 25px;
     width: 25px;
 }
-.settings {
+.column {
   flex-direction: column;
+  margin: 20px;
 }
 
 .cat {
   flex-direction: column;
+  margin-bottom: 25px;
 }
 
 h1 {
@@ -132,7 +134,7 @@ h1 {
 }
 
 p {
-  width: 200px;
+  width: 170px;
   margin-right: 20px;
   font-size: 20px;
 }
