--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 * {
-  transition-duration: 0.8s;
+  transition-duration: 1s;
   color: white;
   margin: 0;
 }
 
+
+
 html,
 body {
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-family: 'Noto Serif Display', serif;
   color: white;
   margin: 0;
 }
@@ -63,9 +65,10 @@ body {
 }
 
 .title {
-  font-family: "Sofia", sans-serif;
+  /* font-family: "Sofia", sans-serif; */
+  /* font-family: noto-serif-semicondensed, serif; */
   font-size: 90px;
-  color: white;
+  color: rgb(255, 255, 255);
   position: fixed;
   width: 100%;
   height: 100%;
@@ -73,6 +76,151 @@ body {
   align-items: center;
   flex-direction: column;
 }
+
+#logo{
+  overflow: hidden;
+  transform: translatey(0px);
+}
+
+#container{
+  animation: float 6s ease-in-out infinite;
+  left: -70px;
+  position: relative;
+}
+
+.logoText{
+  position:absolute;
+  color: rgb(255, 255, 255);
+  font-size: 100px;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
+
+
+.sign__word {
+  color: #ffffff;
+  animation: neon 3s ease-in-out infinite alternate;
+}
+/*-- Animation Keyframes --*/
+@keyframes neon {
+  from {
+    text-shadow: 0 0 6px rgba(255, 255, 255, 0.92);
+ }
+  to {
+    text-shadow: 0 0 20px rgba(255, 255, 255, 0.9);
+ }
+}
+
+
+
+
+.s{
+  font-size: 380px;
+}
+
+#s1{
+  left: -121px;
+  top: -350px;
+}
+
+#s2{
+  left: -230px;
+  top: -186px;
+}
+
+#erene{
+  left: 72px;
+  top: -71px;
+}
+
+#ounds {
+  left: -20px;
+  top: 83px;
+  width: 400px;
+}
+
+#note{
+  left: 165px;
+  top: -47px;
+  font-size: 230px;
+  transform: rotate(10deg);
+}
+
+@keyframes float {
+  0% {
+    transform: translatey(0px);
+  }
+  50% {
+    transform: translatey(-20px);
+  }
+  100% {
+    transform: translatey(0px);
+  }
+}
+
+
+
+.btn {
+  color: #fff;
+  cursor: pointer;
+  font-size:16px;
+  font-weight: 400;
+  line-height: 45px;
+  margin: 0 0 2em;
+  /* max-width: 160px;  */
+  position: relative;
+  text-decoration: none;
+  text-transform: uppercase;
+  width: 500px; 
+}
+
+.btn:hover { text-decoration: none; }
+
+
+.btn-2 {
+  font-family: 'Noto Serif Display', serif;
+  top: 300px;
+  letter-spacing: 0;
+  background-color: transparent;
+  border: transparent;
+    color: white;
+    text-decoration: none;
+}
+
+.btn-2:hover,
+.btn-2:active {
+letter-spacing: 5px;
+background: rgba(white, 1);
+}
+
+.btn-2:after,
+.btn-2:before {
+backface-visibility: hidden;
+border: 1px solid white;
+bottom: 0px;
+content: " ";
+display: block;
+margin: 0 auto;
+position: relative;
+transition: all 280ms ease-in-out;
+width: 0;
+}
+
+.btn-2:hover:after,
+.btn-2:hover:before {
+backface-visibility: hidden;
+border-color: #fff;
+transition: width 350ms ease-in-out;
+width: 70%;
+}
+
+.btn-2:hover:before {
+bottom: auto;
+top: 0;
+width: 70%;
+}
+
 
 .app {
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
@@ -172,3 +320,4 @@ p {
   margin-right: 20px;
   font-size: 20px;
 }
+
