--- a/style.css
+++ b/style.css
@@ -12,13 +12,14 @@ body {
   color: white;
   margin: 0;
   background-color: #000000;
+  text-rendering: optimizeLegibility
 }
 
 
 
 #version{
   position: absolute;
-  
+
 }
 
 
@@ -439,7 +440,8 @@ width: 70%;
     overflow-x: hidden;
   }
   .music p{
-    width: 170px !important
+    width: 170px !important;
+    font-size: 120%;
   }
   .music h2 {
     width: 200px !important
@@ -502,8 +504,8 @@ width: 70%;
 }
 
 .check {
-    height: 25px;
-    width: 25px;
+    height: 125%;
+    width: 125%;
 }
 .column {
   flex-direction: column;
