--- a/style.css
+++ b/style.css
@@ -4,8 +4,6 @@
   margin: 0;
 }
 
-
-
 html,
 body {
   font-family: 'Noto Serif Display', serif,;
@@ -15,66 +13,9 @@ body {
   text-rendering: optimizeLegibility
 }
 
-
-
 #version{
   position: absolute;
   color: rgba(255, 255, 255, 0.124);
-}
-
-
-
-
-#imgLogo{
-  zoom: 50%;
-}
-
-#ss{
-  position: absolute;
-  animation: sIntro 5s ease-in-out 0s 1 normal none;
-}
-
-#letters{
-  position: absolute;
-  animation: extraIntro 5s ease-in-out 0s 1 normal none;
-}
-
-
-.button {
-  background-color: #4caf50; /* Green */
-  border: none;
-  color: white;
-  padding: 16px 64px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 20px;
-  margin: 4px 2px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-}
-
-.purple {
-  background-color: rgba(0, 0, 0, 0.232);
-  color: rgb(255, 255, 255);
-  border: 2px solid #892b83;
-}
-
-.purple:hover {
-  background-color: #892b83;
-  color: white;
-}
-
-.check {
-  width: 20px;
-  height: 20px;
-  margin-right: 20px;
-}
-
-.radio {
-  width: 20px;
-  height: 20px;
-  margin-right: 20px;
 }
 
 #myVideo, #myVideo2 {
@@ -91,6 +32,7 @@ body {
   display: flex;
 }
 
+
 .title {
   /* font-family: "Sofia", sans-serif; */
   /* font-family: noto-serif-semicondensed, serif; */
@@ -104,6 +46,32 @@ body {
   flex-direction: column;
 }
 
+
+
+
+
+/* Input */
+
+.check {
+  width: 20px;
+  height: 20px;
+  margin-right: 20px;
+}
+
+.radio {
+  width: 20px;
+  height: 20px;
+  margin-right: 20px;
+}
+
+
+
+
+
+
+
+/* Logo */
+
 #logo{
   overflow: hidden;
   transform: translatey(0px);
@@ -111,8 +79,8 @@ body {
 
 #container{
   animation: float 6s ease-in-out 5s infinite;
-  left: -22%;
-  top: -18%;
+  left: -1%;
+  top: 2%;
   position: relative;
   display: flex;
 }
@@ -127,61 +95,23 @@ body {
   user-select: none; /* Standard syntax */
 }
 
-
-.sign__word {
-  color: #ffffff;
-  animation: neon 3s ease-in-out infinite alternate;
-}
-/*-- Animation Keyframes --*/
-@keyframes neon {
-  from {
-    text-shadow: 0 0 6px rgba(255, 255, 255, 0.92);
-  }
-  to {
-    text-shadow: 0 0 20px rgba(255, 255, 255, 0.9);
-  }
+#imgLogo{
+  zoom: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-
-
-@keyframes sIntro {
-  0%{
-    color: transparent;
-    opacity: 0;
-  }
-  30%{
-    color: transparent;
-    opacity: 0;
-  }
-  35%{
-    color: white;
-    opacity: 1;
-  }
-  100%{
-    color: white;
-    opacity: 1;
-  }
+#ss{
+  position: absolute;
+  animation: sIntro 5s ease-in-out 0s 1 normal none;
 }
 
-
-@keyframes extraIntro {
-  0%{
-    color: transparent;
-    opacity: 0;
-  }
-  75%{
-    opacity: 0;
-    color: transparent;
-  }
-  80%{
-    opacity: 1;
-    color: white;
-  }
-  100%{
-    opacity: 1;
-    color: white;
-  }
+#letters{
+  position: absolute;
+  animation: extraIntro 5s ease-in-out 0s 1 normal none;
 }
+
 .extraText{
   animation: extraIntro 5s ease-in-out 0s 1 normal none;
 }
@@ -231,10 +161,62 @@ body {
   }
 }
 
+@keyframes sIntro {
+  0%{
+    color: transparent;
+    opacity: 0;
+  }
+  30%{
+    color: transparent;
+    opacity: 0;
+  }
+  35%{
+    color: white;
+    opacity: 1;
+  }
+  100%{
+    color: white;
+    opacity: 1;
+  }
+}
+
+
+@keyframes extraIntro {
+  0%{
+    color: transparent;
+    opacity: 0;
+  }
+  80%{
+    opacity: 0;
+    color: transparent;
+  }
+  85%{
+    opacity: 1;
+    color: white;
+  }
+  100%{
+    opacity: 1;
+    color: white;
+  }
+}
+
+
+
+
+
+
+
+
+/* Animation Intro Boxes */
+
 #box{
   position: absolute;
   border-style: none;
   animation: introBox 2s ease-in-out 0s 1 normal none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
 }
 
 
@@ -301,7 +283,11 @@ body {
   position: absolute;
   border-style: none;
   animation: introLine 2s ease-in-out 2.5s 1 normal none;
-  transform: skew(-30deg);
+  transform: skew(-27deg);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
 }
 
 @keyframes introLine {
@@ -310,7 +296,7 @@ body {
     background-color: rgba(255, 255, 255, 0);
     height: 10px;
     width: 10px;
-    left: 49.5%;
+    left: 47%;
   }
   8%{
     background-color: rgba(255, 255, 255, 0);
@@ -342,7 +328,7 @@ body {
   }
 
   89%{
-    left: 49.5%;
+    left: 47%;
     width: 500px;
   }
   
@@ -373,6 +359,14 @@ body {
 
 
 
+
+
+
+
+
+
+/* Button Stuff */
+
 .btn {
   color: #fff;
   cursor: pointer;
@@ -397,8 +391,9 @@ body {
   letter-spacing: 0;
   background-color: transparent;
   border: transparent;
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
+  font-size: 20px;
 }
 
 .btn-2:hover,
@@ -435,6 +430,16 @@ width: 70%;
 }
 
 
+
+
+
+
+
+
+
+
+/* App Settings */
+
 .app {
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   position: fixed;
@@ -443,98 +448,6 @@ width: 70%;
    /* width: 100%; */
    height: 100%;
    align-items: center;
-}
-
-@media screen and (max-height: 700px) {
-.app, .title{
-  zoom: 65%;
-}
-#myVideo{
-  zoom: 10%
-}
-}
-
-
-@media screen and (max-width: 1000px) {
-  *{zoom: 90%;}
-  .app{
-    flex-direction: column;
-    width: 100%;
-    zoom:200%;
-    overflow-y: scroll;
-    padding: 0%;
-    overflow-x: hidden;
-  }
-  .music p{
-    width: 170px !important;
-    font-size: 120%;
-  }
-  .music h2 {
-    width: 200px !important
-  }
-  .opt2{
-    justify-content: center
-  }
-  .cat {
-    align-items: center;
-  }
-  #myVideo, #myVideo2 {
-    right: -1700px;
-  }
-  #container{
-    left: -48%;
-    top: -11%;
-  }
-  @keyframes introLine {
-    /* None */
-    0%{
-      background-color: rgba(255, 255, 255, 0);
-      height: 10px;
-      width: 10px;
-      left: 47%;
-    }
-    8%{
-      background-color: rgba(255, 255, 255, 0);
-    }
-  
-    /* Dot */
-    20%{
-      background-color: white;
-    }
-    25%{
-      height: 10px;
-    }
-  
-    /* Line */
-    50% {
-      height: 500px;
-    }
-    55% {
-      width: 10px;
-    }
-  
-    /* Box */
-    75% {
-      width: 500px;
-    }
-    87% {
-      width: 500px;
-      background-color: white;
-    }
-  
-    89%{
-      left: 47%;
-      width: 500px;
-    }
-    
-    /* Move right */
-    100%{
-      left: 90%;
-      width: 10px;
-      background-color: white;
-      height: 500px;
-    }
-  }
 }
 
 .opt, .opt2 {
@@ -620,3 +533,419 @@ p {
   font-size: 20px;
 }
 
+
+
+
+
+
+
+
+/* Screen Sizes & Mobile Fixes */
+
+@media screen and (max-height: 700px) {
+  .app, .title{
+    zoom: 65%;
+  }
+  #myVideo{
+    zoom: 10%
+  }
+}
+ 
+@media screen and (min-width: 1500px) {
+  @keyframes introLine {
+    /* None */
+    0%{
+      background-color: rgba(255, 255, 255, 0);
+      height: 10px;
+      width: 10px;
+      left: 47.5%;
+    }
+    8%{
+      background-color: rgba(255, 255, 255, 0);
+    }
+  
+    /* Dot */
+    20%{
+      background-color: white;
+    }
+    25%{
+      height: 10px;
+    }
+  
+    /* Line */
+    50% {
+      height: 500px;
+    }
+    55% {
+      width: 10px;
+    }
+  
+    /* Box */
+    75% {
+      width: 500px;
+    }
+    87% {
+      width: 500px;
+      background-color: white;
+    }
+  
+    89%{
+      left: 47.5%;
+      width: 500px;
+    }
+    
+    /* Move right */
+    100%{
+      left: 90%;
+      width: 10px;
+      background-color: white;
+      height: 500px;
+    }
+  }
+}
+
+@media screen and (max-width: 1440px) {
+  @keyframes introLine {
+    /* None */
+    0%{
+      background-color: rgba(255, 255, 255, 0);
+      height: 10px;
+      width: 10px;
+      left: 47.3%;
+    }
+    8%{
+      background-color: rgba(255, 255, 255, 0);
+    }
+  
+    /* Dot */
+    20%{
+      background-color: white;
+    }
+    25%{
+      height: 10px;
+    }
+  
+    /* Line */
+    50% {
+      height: 500px;
+    }
+    55% {
+      width: 10px;
+    }
+  
+    /* Box */
+    75% {
+      width: 500px;
+    }
+    87% {
+      width: 500px;
+      background-color: white;
+    }
+  
+    89%{
+      left: 47.3%;
+      width: 500px;
+    }
+    
+    /* Move right */
+    100%{
+      left: 90%;
+      width: 10px;
+      background-color: white;
+      height: 500px;
+    }
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  @keyframes introLine {
+    /* None */
+    0%{
+      background-color: rgba(255, 255, 255, 0);
+      height: 10px;
+      width: 10px;
+      left: 46.4%;
+    }
+    8%{
+      background-color: rgba(255, 255, 255, 0);
+    }
+  
+    /* Dot */
+    20%{
+      background-color: white;
+    }
+    25%{
+      height: 10px;
+    }
+  
+    /* Line */
+    50% {
+      height: 500px;
+    }
+    55% {
+      width: 10px;
+    }
+  
+    /* Box */
+    75% {
+      width: 500px;
+    }
+    87% {
+      width: 500px;
+      background-color: white;
+    }
+  
+    89%{
+      left: 46.4%;
+      width: 500px;
+    }
+    
+    /* Move right */
+    100%{
+      left: 90%;
+      width: 10px;
+      background-color: white;
+      height: 500px;
+    }
+  }
+}
+
+@media screen and (max-width: 900px) {
+  @keyframes introLine {
+    /* None */
+    0%{
+      background-color: rgba(255, 255, 255, 0);
+      height: 10px;
+      width: 10px;
+      left: 46.5%;
+    }
+    8%{
+      background-color: rgba(255, 255, 255, 0);
+    }
+  
+    /* Dot */
+    20%{
+      background-color: white;
+    }
+    25%{
+      height: 10px;
+    }
+  
+    /* Line */
+    50% {
+      height: 500px;
+    }
+    55% {
+      width: 10px;
+    }
+  
+    /* Box */
+    75% {
+      width: 500px;
+    }
+    87% {
+      width: 500px;
+      background-color: white;
+    }
+  
+    89%{
+      left: 46.5%;
+      width: 500px;
+    }
+    
+    /* Move right */
+    100%{
+      left: 90%;
+      width: 10px;
+      background-color: white;
+      height: 500px;
+    }
+  }
+}
+  
+@media screen and (max-width: 800px) {
+    *{zoom: 90%;}
+    .app{
+      flex-direction: column;
+      width: 100%;
+      zoom:200%;
+      overflow-y: scroll;
+      padding: 0%;
+      overflow-x: hidden;
+    }
+    .music p{
+      width: 170px !important;
+      font-size: 120%;
+    }
+    .music h2 {
+      width: 200px !important
+    }
+    .opt2{
+      justify-content: center
+    }
+    .cat {
+      align-items: center;
+    }
+    #myVideo, #myVideo2 {
+      right: -1700px;
+    }
+    #container{
+      /* left: -48%;
+      top: -11%; */
+    }
+    @keyframes introLine {
+      /* None */
+      0%{
+        background-color: rgba(255, 255, 255, 0);
+        height: 10px;
+        width: 10px;
+        left: 47%;
+      }
+      8%{
+        background-color: rgba(255, 255, 255, 0);
+      }
+    
+      /* Dot */
+      20%{
+        background-color: white;
+      }
+      25%{
+        height: 10px;
+      }
+    
+      /* Line */
+      50% {
+        height: 500px;
+      }
+      55% {
+        width: 10px;
+      }
+    
+      /* Box */
+      75% {
+        width: 500px;
+      }
+      87% {
+        width: 500px;
+        background-color: white;
+      }
+    
+      89%{
+        left: 47%;
+        width: 500px;
+      }
+      
+      /* Move right */
+      100%{
+        left: 90%;
+        width: 10px;
+        background-color: white;
+        height: 500px;
+      }
+    }
+}
+@media screen and (max-width: 720px) {
+  @keyframes introLine {
+    /* None */
+    0%{
+      background-color: rgba(255, 255, 255, 0);
+      height: 10px;
+      width: 10px;
+      left: 46%;
+    }
+    8%{
+      background-color: rgba(255, 255, 255, 0);
+    }
+  
+    /* Dot */
+    20%{
+      background-color: white;
+    }
+    25%{
+      height: 10px;
+    }
+  
+    /* Line */
+    50% {
+      height: 500px;
+    }
+    55% {
+      width: 10px;
+    }
+  
+    /* Box */
+    75% {
+      width: 500px;
+    }
+    87% {
+      width: 500px;
+      background-color: white;
+    }
+  
+    89%{
+      left: 46%;
+      width: 500px;
+    }
+    
+    /* Move right */
+    100%{
+      left: 90%;
+      width: 10px;
+      background-color: white;
+      height: 500px;
+    }
+  }
+}
+
+@media screen and (max-width: 400px) {
+  @keyframes introLine {
+    /* None */
+    0%{
+      background-color: rgba(255, 255, 255, 0);
+      height: 10px;
+      width: 10px;
+      left: 45.5%;
+    }
+    8%{
+      background-color: rgba(255, 255, 255, 0);
+    }
+  
+    /* Dot */
+    20%{
+      background-color: white;
+    }
+    25%{
+      height: 10px;
+    }
+  
+    /* Line */
+    50% {
+      height: 500px;
+    }
+    55% {
+      width: 10px;
+    }
+  
+    /* Box */
+    75% {
+      width: 500px;
+    }
+    87% {
+      width: 500px;
+      background-color: white;
+    }
+  
+    89%{
+      left: 45.5%;
+      width: 500px;
+    }
+    
+    /* Move right */
+    100%{
+      left: 90%;
+      width: 10px;
+      background-color: white;
+      height: 500px;
+    }
+  }
+}
