--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@ body {
   position: absolute;
   color: rgba(255, 255, 255, 0.124);
   z-index: 50;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
 
 #myVideo, #myVideo2 {
@@ -479,6 +482,13 @@ width: 70%;
    align-items: center;
 }
 
+.cat h4{
+  margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
 .opt, .opt2 {
   align-items: center;
   margin-bottom: 10px;
@@ -535,6 +545,11 @@ width: 70%;
 .column {
   flex-direction: column;
   margin: 20px;
+  min-width: 340px;
+}
+
+#musicTab{
+  min-width: 420px;
 }
 
 .cat {
@@ -794,9 +809,57 @@ p {
 }
   
 @media screen and (max-width: 800px) {
-  #infoBox{zoom: 130% !important; font-size: 30px;}
-    *{zoom: 90%;}
+  #infoBox{ font-size: 30px;}
+    p, .music p{
+      width: 80px;
+      font-size: 15px;
+      margin-right: 10px;
+    }
+    .check, .radio{
+      height: 15px;
+      width: 15px;
+      margin-right: 10px;
+    }
+    .vol{
+      width: 80px;
+      height: 5px;
+    }
+    .vol {
+      display: none;
+      -webkit-appearance: none;
+      border-radius: 3px;
+      background: #d3d3d3;
+      outline: none;
+      opacity: 0.7;
+      -webkit-transition: 0.2s;
+      transition: opacity 0.2s;
+    }
+    
+    .vol:hover {
+      opacity: 1;
+    }
+    
+    .vol::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      background: #04aa6d;
+      cursor: pointer;
+    }
+    
+    .vol::-moz-range-thumb {
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      cursor: pointer;
+    }
+
+
+    .column{min-width: 240px;}
     .app{
+      font-size: 15px;
       flex-direction: column;
       width: 100%;
       zoom:200%;
@@ -804,17 +867,20 @@ p {
       padding: 0%;
       overflow-x: hidden;
     }
-    .music p{
-      width: 170px !important;
-      font-size: 120%;
-    }
     .music h2 {
-      width: 200px !important
+      width: 180px;
+      font-size: 15px;
     }
-    .opt2{
-      justify-content: center
+    .opt2, .opt{
+      display: flex;
+      width: 200px;
+    }
+    .music p{
+      font-size: 11px;
+      margin-right: 10px;
     }
     .cat {
+      display: flex;
       align-items: center;
     }
     #myVideo, #myVideo2 {
