--- a/style.css
+++ b/style.css
@@ -11,11 +11,11 @@ body {
   margin: 0;
   background-color: #000000;
   text-rendering: optimizeLegibility;
-  height:100%;
+  height: 100%;
   z-index: 0;
 }
 
-#version{
+#version {
   position: absolute;
   color: rgba(255, 255, 255, 0.124);
   z-index: 50;
@@ -24,7 +24,8 @@ body {
   user-select: none; /* Standard syntax */
 }
 
-#myVideo, #myVideo2 {
+#myVideo,
+#myVideo2 {
   position: fixed;
   right: 0;
   bottom: 0;
@@ -38,7 +39,6 @@ body {
   display: flex;
 }
 
-
 .title {
   /* font-family: "Sofia", sans-serif; */
   /* font-family: noto-serif-semicondensed, serif; */
@@ -51,10 +51,6 @@ body {
   align-items: center;
   flex-direction: column;
 }
-
-
-
-
 
 /* Input */
 
@@ -70,17 +66,16 @@ body {
   margin-right: 20px;
 }
 
-.dropdown{
+.dropdown {
   background-color: transparent;
   border-color: transparent;
   border: none;
   border-radius: 50%;
 }
 
-
 /* Debugging */
 
-#infoBox{
+#infoBox {
   /* width: 80%;
   height: 80%; */
   background-color: #161616f1;
@@ -88,33 +83,32 @@ body {
   color: white;
   z-index: 3;
   padding: 40px;
-  font-family:'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   display: flex;
   flex-direction: column;
 }
-#infoBox p{
-  font-family:'Courier New', Courier, monospace;
+#infoBox p {
+  font-family: "Courier New", Courier, monospace;
   /* font-size: 30px; */
   padding: 10px;
   width: unset;
   margin: unset;
 }
 
-#infoBox h3{
+#infoBox h3 {
   padding: 10px;
   display: flex;
   justify-content: center;
 }
 
-
 /* Logo */
 
-#logo{
+#logo {
   overflow: hidden;
   transform: translatey(0px);
 }
 
-#container{
+#container {
   animation: float 6s ease-in-out 5s infinite;
   left: -1%;
   top: 2%;
@@ -122,8 +116,8 @@ body {
   display: flex;
 }
 
-.logoText{
-  position:absolute;
+.logoText {
+  position: absolute;
   color: rgb(255, 255, 255);
   /* color: none; */
   font-size: 100px;
@@ -132,43 +126,43 @@ body {
   user-select: none; /* Standard syntax */
 }
 
-#imgLogo{
+#imgLogo {
   zoom: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-#ss{
+#ss {
   position: absolute;
   animation: sIntro 5s ease-in-out 0s 1 normal none;
 }
 
-#letters{
+#letters {
   position: absolute;
   animation: extraIntro 5s ease-in-out 0s 1 normal none;
 }
 
-.extraText{
+.extraText {
   animation: extraIntro 5s ease-in-out 0s 1 normal none;
 }
 
-.s{
+.s {
   font-size: 380px;
   animation: sIntro 5s ease-in-out 0s 1 normal none;
 }
 
-#s1{
+#s1 {
   left: -121px;
   top: -350px;
 }
 
-#s2{
+#s2 {
   left: -230px;
   top: -186px;
 }
 
-#erene{
+#erene {
   left: 72px;
   top: -71px;
 }
@@ -179,7 +173,7 @@ body {
   width: 400px;
 }
 
-#note{
+#note {
   left: 165px;
   top: -47px;
   font-size: 230px;
@@ -199,54 +193,46 @@ body {
 }
 
 @keyframes sIntro {
-  0%{
+  0% {
     color: transparent;
     opacity: 0;
   }
-  30%{
+  30% {
     color: transparent;
     opacity: 0;
   }
-  35%{
+  35% {
     color: white;
     opacity: 1;
   }
-  100%{
+  100% {
     color: white;
     opacity: 1;
   }
 }
-
 
 @keyframes extraIntro {
-  0%{
+  0% {
     color: transparent;
     opacity: 0;
   }
-  80%{
+  80% {
     opacity: 0;
     color: transparent;
   }
-  85%{
+  85% {
     opacity: 1;
     color: white;
   }
-  100%{
+  100% {
     opacity: 1;
     color: white;
   }
 }
-
-
-
-
-
-
-
 
 /* Animation Intro Boxes */
 
-#box{
+#box {
   position: absolute;
   border-style: none;
   animation: introBox 2s ease-in-out 0s 1 normal none;
@@ -256,25 +242,24 @@ body {
   align-content: center;
 }
 
-
 @keyframes introBox {
   /* None */
-  0%{
+  0% {
     border: none;
     background-color: rgba(255, 255, 255, 0);
     height: 10px;
     width: 10px;
     transform: rotate(0deg);
   }
-  8%{
+  8% {
     background-color: rgba(255, 255, 255, 0);
   }
 
   /* Dot */
-  20%{
+  20% {
     background-color: white;
   }
-  25%{
+  25% {
     width: 10px;
   }
 
@@ -292,7 +277,6 @@ body {
 
   /* Box */
   75% {
-    
     border-width: 250px 0px;
     border-color: white;
   }
@@ -302,12 +286,12 @@ body {
     border-width: 250px 0px;
   }
 
-  89%{
+  89% {
     background-color: transparent;
   }
-  
+
   /* Top/Bottom Borders */
-  100%{
+  100% {
     border-style: solid;
     width: 700px;
     background-color: transparent;
@@ -316,7 +300,7 @@ body {
   }
 }
 
-#line{
+#line {
   position: absolute;
   border-style: none;
   animation: introLine 2s ease-in-out 2.5s 1 normal none;
@@ -329,21 +313,21 @@ body {
 
 @keyframes introLine {
   /* None */
-  0%{
+  0% {
     background-color: rgba(255, 255, 255, 0);
     height: 10px;
     width: 10px;
     left: 47%;
   }
-  8%{
+  8% {
     background-color: rgba(255, 255, 255, 0);
   }
 
   /* Dot */
-  20%{
+  20% {
     background-color: white;
   }
-  25%{
+  25% {
     height: 10px;
   }
 
@@ -364,13 +348,13 @@ body {
     background-color: white;
   }
 
-  89%{
+  89% {
     left: 47%;
     width: 500px;
   }
-  
+
   /* Move right */
-  100%{
+  100% {
     left: 90%;
     width: 10px;
     background-color: white;
@@ -379,35 +363,26 @@ body {
 }
 
 @keyframes fadeIn {
-  0%{
-    opacity:0;
+  0% {
+    opacity: 0;
     display: none;
   }
-  89%{
-    opacity:0;
+  89% {
+    opacity: 0;
     display: none;
   }
-  100%{
-    opacity:1;
+  100% {
+    opacity: 1;
     display: flex;
   }
 }
-
-
-
-
-
-
-
-
-
 
 /* Button Stuff */
 
 .btn {
   color: #fff;
   cursor: pointer;
-  font-size:16px;
+  font-size: 16px;
   font-weight: 400;
   line-height: 45px;
   margin: 0 0 2em;
@@ -415,15 +390,16 @@ body {
   position: relative;
   text-decoration: none;
   text-transform: uppercase;
-  width: 500px; 
+  width: 500px;
   animation: fadeIn 5s ease-in-out 0s 1 normal none;
 }
 
-.btn:hover { text-decoration: none; }
-
+.btn:hover {
+  text-decoration: none;
+}
 
 .btn-2 {
-  font-family: 'Noto Serif Display', serif;
+  font-family: "Noto Serif Display", serif;
   top: 300px;
   letter-spacing: 0;
   background-color: transparent;
@@ -435,45 +411,36 @@ body {
 
 .btn-2:hover,
 .btn-2:active {
-letter-spacing: 5px;
-background: rgba(white, 1);
+  letter-spacing: 5px;
+  background: rgba(white, 1);
 }
 
 .btn-2:after,
 .btn-2:before {
-backface-visibility: hidden;
-border: 1px solid white;
-bottom: 0px;
-content: " ";
-display: block;
-margin: 0 auto;
-position: relative;
-transition: all 280ms ease-in-out;
-width: 0;
+  backface-visibility: hidden;
+  border: 1px solid white;
+  bottom: 0px;
+  content: " ";
+  display: block;
+  margin: 0 auto;
+  position: relative;
+  transition: all 280ms ease-in-out;
+  width: 0;
 }
 
 .btn-2:hover:after,
 .btn-2:hover:before {
-backface-visibility: hidden;
-border-color: #fff;
-transition: width 350ms ease-in-out;
-width: 70%;
+  backface-visibility: hidden;
+  border-color: #fff;
+  transition: width 350ms ease-in-out;
+  width: 70%;
 }
 
 .btn-2:hover:before {
-bottom: auto;
-top: 0;
-width: 70%;
+  bottom: auto;
+  top: 0;
+  width: 70%;
 }
-
-
-
-
-
-
-
-
-
 
 /* App Settings */
 
@@ -482,24 +449,25 @@ width: 70%;
   position: fixed;
   background-color: rgba(31, 30, 32, 0.392);
   padding: 15px;
-   /* width: 100%; */
-   height: 100%;
-   align-items: center;
+  /* width: 100%; */
+  height: 100%;
+  align-items: center;
 }
 
-.cat h4{
+.cat h4 {
   margin-block-start: 0.67em;
-    margin-block-end: 0.67em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
+  margin-block-end: 0.67em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
 }
 
-.opt, .opt2 {
+.opt,
+.opt2 {
   align-items: center;
   margin-bottom: 10px;
 }
 
-.opt2{
+.opt2 {
   margin-top: 15px;
 }
 
@@ -542,10 +510,10 @@ width: 70%;
 }
 
 .check {
-    /* height: 125%;
+  /* height: 125%;
     width: 125%; */
-    height: 25px;
-    width: 25px;
+  height: 25px;
+  width: 25px;
 }
 .column {
   flex-direction: column;
@@ -553,7 +521,7 @@ width: 70%;
   min-width: 340px;
 }
 
-#musicTab{
+#musicTab {
   min-width: 420px;
 }
 
@@ -566,9 +534,9 @@ h1 {
   margin-bottom: 25px;
 }
 
-.music h2{
+.music h2 {
   width: 280px;
-  font-size: 22px;  
+  font-size: 22px;
   text-decoration: underline;
 }
 
@@ -583,45 +551,39 @@ p {
   font-size: 20px;
 }
 
-
-
-
-
-
-
-
 /* Screen Sizes & Mobile Fixes */
 
 @media screen and (max-height: 700px) {
-  .app, .title{
+  .app,
+  .title {
     zoom: 65%;
   }
-  #myVideo{
-    zoom: 10%
+  #myVideo {
+    zoom: 10%;
   }
 }
- 
+
 @media screen and (min-width: 1500px) {
   @keyframes introLine {
     /* None */
-    0%{
+    0% {
       background-color: rgba(255, 255, 255, 0);
       height: 10px;
       width: 10px;
       left: 47.5%;
     }
-    8%{
+    8% {
       background-color: rgba(255, 255, 255, 0);
     }
-  
+
     /* Dot */
-    20%{
+    20% {
       background-color: white;
     }
-    25%{
+    25% {
       height: 10px;
     }
-  
+
     /* Line */
     50% {
       height: 500px;
@@ -629,7 +591,7 @@ p {
     55% {
       width: 10px;
     }
-  
+
     /* Box */
     75% {
       width: 500px;
@@ -638,14 +600,14 @@ p {
       width: 500px;
       background-color: white;
     }
-  
-    89%{
+
+    89% {
       left: 47.5%;
       width: 500px;
     }
-    
+
     /* Move right */
-    100%{
+    100% {
       left: 90%;
       width: 10px;
       background-color: white;
@@ -657,24 +619,24 @@ p {
 @media screen and (max-width: 1440px) {
   @keyframes introLine {
     /* None */
-    0%{
+    0% {
       background-color: rgba(255, 255, 255, 0);
       height: 10px;
       width: 10px;
       left: 47.3%;
     }
-    8%{
+    8% {
       background-color: rgba(255, 255, 255, 0);
     }
-  
+
     /* Dot */
-    20%{
+    20% {
       background-color: white;
     }
-    25%{
+    25% {
       height: 10px;
     }
-  
+
     /* Line */
     50% {
       height: 500px;
@@ -682,7 +644,7 @@ p {
     55% {
       width: 10px;
     }
-  
+
     /* Box */
     75% {
       width: 500px;
@@ -691,14 +653,14 @@ p {
       width: 500px;
       background-color: white;
     }
-  
-    89%{
+
+    89% {
       left: 47.3%;
       width: 500px;
     }
-    
+
     /* Move right */
-    100%{
+    100% {
       left: 90%;
       width: 10px;
       background-color: white;
@@ -710,24 +672,24 @@ p {
 @media screen and (max-width: 1000px) {
   @keyframes introLine {
     /* None */
-    0%{
+    0% {
       background-color: rgba(255, 255, 255, 0);
       height: 10px;
       width: 10px;
       left: 46.4%;
     }
-    8%{
+    8% {
       background-color: rgba(255, 255, 255, 0);
     }
-  
+
     /* Dot */
-    20%{
+    20% {
       background-color: white;
     }
-    25%{
+    25% {
       height: 10px;
     }
-  
+
     /* Line */
     50% {
       height: 500px;
@@ -735,7 +697,7 @@ p {
     55% {
       width: 10px;
     }
-  
+
     /* Box */
     75% {
       width: 500px;
@@ -744,14 +706,14 @@ p {
       width: 500px;
       background-color: white;
     }
-  
-    89%{
+
+    89% {
       left: 46.4%;
       width: 500px;
     }
-    
+
     /* Move right */
-    100%{
+    100% {
       left: 90%;
       width: 10px;
       background-color: white;
@@ -763,24 +725,24 @@ p {
 @media screen and (max-width: 900px) {
   @keyframes introLine {
     /* None */
-    0%{
+    0% {
       background-color: rgba(255, 255, 255, 0);
       height: 10px;
       width: 10px;
       left: 46.5%;
     }
-    8%{
+    8% {
       background-color: rgba(255, 255, 255, 0);
     }
-  
+
     /* Dot */
-    20%{
+    20% {
       background-color: white;
     }
-    25%{
+    25% {
       height: 10px;
     }
-  
+
     /* Line */
     50% {
       height: 500px;
@@ -788,7 +750,7 @@ p {
     55% {
       width: 10px;
     }
-  
+
     /* Box */
     75% {
       width: 500px;
@@ -797,14 +759,14 @@ p {
       width: 500px;
       background-color: white;
     }
-  
-    89%{
+
+    89% {
       left: 46.5%;
       width: 500px;
     }
-    
+
     /* Move right */
-    100%{
+    100% {
       left: 90%;
       width: 10px;
       background-color: white;
@@ -812,161 +774,116 @@ p {
     }
   }
 }
-  
+
 @media screen and (max-width: 800px) {
-  #infoBox{ font-size: 30px;}
-    p, .music p{
-      width: 80px;
-      font-size: 15px;
-      margin-right: 10px;
-    }
-    .check, .radio{
-      height: 15px;
-      width: 15px;
-      margin-right: 10px;
-    }
-    .vol{
-      width: 80px;
-      height: 5px;
-    }
-    .vol {
-      display: none;
-      -webkit-appearance: none;
-      border-radius: 3px;
-      background: #d3d3d3;
-      outline: none;
-      opacity: 0.7;
-      -webkit-transition: 0.2s;
-      transition: opacity 0.2s;
-    }
-    
-    .vol:hover {
-      opacity: 1;
-    }
-    
-    .vol::-webkit-slider-thumb {
-      -webkit-appearance: none;
-      appearance: none;
-      width: 10px;
-      height: 10px;
-      border-radius: 50%;
-      background: #04aa6d;
-      cursor: pointer;
-    }
-    
-    .vol::-moz-range-thumb {
-      width: 10px;
-      height: 10px;
-      border-radius: 50%;
-      cursor: pointer;
-    }
+  #infoBox {
+    font-size: 30px;
+  }
+  p,
+  .music p {
+    width: 80px;
+    font-size: 15px;
+    margin-right: 10px;
+  }
+  .check,
+  .radio {
+    height: 15px;
+    width: 15px;
+    margin-right: 10px;
+  }
+  .vol {
+    width: 80px;
+    height: 5px;
+  }
+  .vol {
+    display: none;
+    -webkit-appearance: none;
+    border-radius: 3px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: 0.2s;
+    transition: opacity 0.2s;
+  }
 
+  .vol:hover {
+    opacity: 1;
+  }
 
-    .column{min-width: 240px;}
-    .app{
-      font-size: 15px;
-      flex-direction: column;
-      width: 100%;
-      zoom:200%;
-      overflow-y: scroll;
-      padding: 0%;
-      overflow-x: hidden;
-    }
-    .music h2 {
-      width: 180px;
-      font-size: 15px;
-    }
-    .opt2, .opt{
-      display: flex;
-      width: 200px;
-    }
-    .music p{
-      font-size: 11px;
-      margin-right: 10px;
-    }
-    .cat {
-      display: flex;
-      align-items: center;
-    }
-    #myVideo, #myVideo2 {
-      right: -1700px;
-    }
-    #container{
-      /* left: -48%;
+  .vol::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background: #04aa6d;
+    cursor: pointer;
+  }
+
+  .vol::-moz-range-thumb {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+
+  .column {
+    min-width: 240px;
+  }
+  .app {
+    font-size: 15px;
+    flex-direction: column;
+    width: 100%;
+    zoom: 200%;
+    overflow-y: scroll;
+    padding: 0%;
+    overflow-x: hidden;
+  }
+  .music h2 {
+    width: 180px;
+    font-size: 15px;
+  }
+  .opt2,
+  .opt {
+    display: flex;
+    width: 200px;
+  }
+  .music p {
+    font-size: 11px;
+    margin-right: 10px;
+  }
+  .cat {
+    display: flex;
+    align-items: center;
+  }
+  #myVideo,
+  #myVideo2 {
+    right: -1700px;
+  }
+  #container {
+    /* left: -48%;
       top: -11%; */
-    }
-    @keyframes introLine {
-      /* None */
-      0%{
-        background-color: rgba(255, 255, 255, 0);
-        height: 10px;
-        width: 10px;
-        left: 47%;
-      }
-      8%{
-        background-color: rgba(255, 255, 255, 0);
-      }
-    
-      /* Dot */
-      20%{
-        background-color: white;
-      }
-      25%{
-        height: 10px;
-      }
-    
-      /* Line */
-      50% {
-        height: 500px;
-      }
-      55% {
-        width: 10px;
-      }
-    
-      /* Box */
-      75% {
-        width: 500px;
-      }
-      87% {
-        width: 500px;
-        background-color: white;
-      }
-    
-      89%{
-        left: 47%;
-        width: 500px;
-      }
-      
-      /* Move right */
-      100%{
-        left: 90%;
-        width: 10px;
-        background-color: white;
-        height: 500px;
-      }
-    }
-}
-@media screen and (max-width: 720px) {
+  }
   @keyframes introLine {
     /* None */
-    0%{
+    0% {
       background-color: rgba(255, 255, 255, 0);
       height: 10px;
       width: 10px;
-      left: 46%;
+      left: 47%;
     }
-    8%{
+    8% {
       background-color: rgba(255, 255, 255, 0);
     }
-  
+
     /* Dot */
-    20%{
+    20% {
       background-color: white;
     }
-    25%{
+    25% {
       height: 10px;
     }
-  
+
     /* Line */
     50% {
       height: 500px;
@@ -974,7 +891,7 @@ p {
     55% {
       width: 10px;
     }
-  
+
     /* Box */
     75% {
       width: 500px;
@@ -983,14 +900,66 @@ p {
       width: 500px;
       background-color: white;
     }
-  
-    89%{
+
+    89% {
+      left: 47%;
+      width: 500px;
+    }
+
+    /* Move right */
+    100% {
+      left: 90%;
+      width: 10px;
+      background-color: white;
+      height: 500px;
+    }
+  }
+}
+@media screen and (max-width: 720px) {
+  @keyframes introLine {
+    /* None */
+    0% {
+      background-color: rgba(255, 255, 255, 0);
+      height: 10px;
+      width: 10px;
+      left: 46%;
+    }
+    8% {
+      background-color: rgba(255, 255, 255, 0);
+    }
+
+    /* Dot */
+    20% {
+      background-color: white;
+    }
+    25% {
+      height: 10px;
+    }
+
+    /* Line */
+    50% {
+      height: 500px;
+    }
+    55% {
+      width: 10px;
+    }
+
+    /* Box */
+    75% {
+      width: 500px;
+    }
+    87% {
+      width: 500px;
+      background-color: white;
+    }
+
+    89% {
       left: 46%;
       width: 500px;
     }
-    
+
     /* Move right */
-    100%{
+    100% {
       left: 90%;
       width: 10px;
       background-color: white;
@@ -1002,24 +971,24 @@ p {
 @media screen and (max-width: 400px) {
   @keyframes introLine {
     /* None */
-    0%{
+    0% {
       background-color: rgba(255, 255, 255, 0);
       height: 10px;
       width: 10px;
       left: 45.5%;
     }
-    8%{
+    8% {
       background-color: rgba(255, 255, 255, 0);
     }
-  
+
     /* Dot */
-    20%{
+    20% {
       background-color: white;
     }
-    25%{
+    25% {
       height: 10px;
     }
-  
+
     /* Line */
     50% {
       height: 500px;
@@ -1027,7 +996,7 @@ p {
     55% {
       width: 10px;
     }
-  
+
     /* Box */
     75% {
       width: 500px;
@@ -1036,14 +1005,72 @@ p {
       width: 500px;
       background-color: white;
     }
-  
-    89%{
+
+    89% {
       left: 45.5%;
       width: 500px;
     }
-    
+
     /* Move right */
-    100%{
+    100% {
+      left: 90%;
+      width: 10px;
+      background-color: white;
+      height: 500px;
+    }
+  }
+}
+
+@media screen and (max-width: 400px) {
+  *{zoom: 94%;}
+  #ss, #letters{
+    zoom: unset;
+    width: 700px;
+  }
+  @keyframes introLine {
+    /* None */
+    0% {
+      background-color: rgba(255, 255, 255, 0);
+      height: 10px;
+      width: 10px;
+      left: 44%;
+    }
+    8% {
+      background-color: rgba(255, 255, 255, 0);
+    }
+
+    /* Dot */
+    20% {
+      background-color: white;
+    }
+    25% {
+      height: 10px;
+    }
+
+    /* Line */
+    50% {
+      height: 500px;
+    }
+    55% {
+      width: 10px;
+    }
+
+    /* Box */
+    75% {
+      width: 500px;
+    }
+    87% {
+      width: 500px;
+      background-color: white;
+    }
+
+    89% {
+      left: 44%;
+      width: 500px;
+    }
+
+    /* Move right */
+    100% {
       left: 90%;
       width: 10px;
       background-color: white;
